fix(dialog): make buttons align left

--- a/styles/select-book-dialog.less
+++ b/styles/select-book-dialog.less
@@ -1,5 +1,9 @@
-.dialog-frame.import-markdown-select-notebook-dialog {
+.ui.modal.dialog-frame.import-markdown-select-notebook-dialog {
   min-width: 600px;
   width: 50vw !important;
   min-height: 50vh;
+
+  .actions {
+    text-align: left;
+  }
 }
